Validation abstraction and fixes to align output/input/arg lists to model.

--- a/src/app/editor-common/components/expression-input/expression-input.component.scss
+++ b/src/app/editor-common/components/expression-input/expression-input.component.scss
@@ -9,7 +9,7 @@
         width: 46px;
     }
 
-    &.validatable {
+    &.expr {
         position: relative;
         .input-group-btn, input {
             cursor: pointer;
